--- a/Week 4/ASP.NET MVC/ASP.NET_MVC.csproj
+++ b/Week 4/ASP.NET MVC/ASP.NET_MVC.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Facade\Facade.csproj" />
+  </ItemGroup>
+
 </Project>
