Razor pages 1.2 - Adding a model

--- a/Week 7/RazorPagesMovie/appsettings.json
+++ b/Week 7/RazorPagesMovie/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RazorPagesMovieContext": "Server=(localdb)\\mssqllocaldb;Database=RazorPagesMovieContext-6e6782b1-04d7-4e30-bc73-631eac70cf54;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
