Razor Pages 2.1 - Get Started

--- a/Week 7/ContosoUniversity_2/appsettings.json
+++ b/Week 7/ContosoUniversity_2/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SchoolContext": "Server=(localdb)\\mssqllocaldb;Database=SchoolContext-ef0fc58b-0ac8-4239-b0f7-4d59375342e4;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
